# ecommerce-django-drf-postgres-vue

./: .gitignore  README.md
backend_django/: .gitignore  pyproject.toml  requirements.txt
backend_django/backend_django/: settings.py  urls.py
backend_django/product/: data.json  models.py  serializer.py  urls.py  utils.py  views.py
backend_django/product/migrations/: 0001_initial.py  0002_alter_invoice_amount.py
frontend_vue/: .eslintrc.js  .gitignore  bun.lockb  package-lock.json  package.json
frontend_vue/public/: package-lock.json
frontend_vue/src/: App.vue  main.js
frontend_vue/src/components/: NavBarCustom.vue
frontend_vue/src/router/: index.js
frontend_vue/src/store/: index.js
frontend_vue/src/views/: CartView.vue  DetailView.vue  HomeView.vue  InvoiceView.vue
